<?xml version="1.0" encoding="utf-8"?>
<com.jiubang.shell.folder.smartcard.GLMemCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.jiubang.shell.common.component.ShellTextViewWrapper
        android:id="@+id/smart_card_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="18dp"
        android:text="@string/smartcard_memclean_title_tip"
        android:textColor="#FFFFFFFF"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="horizontal" >

        <com.jiubang.shell.folder.smartcard.GLCleanMemView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:id="@+id/clean_mem_image"
            android:background="@drawable/gl_appdrawer_arrange_restore" />

        <com.jiubang.shell.common.component.ShellTextViewWrapper
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@+id/smartcard_mem_boost"
                android:layout_toRightOf="@id/clean_mem_image"
                android:text="@string/smartcard_memclean_detail_tip"
                android:id="@+id/smartcard_memclean_detail"
                android:layout_centerVertical="true"
                android:singleLine="false"
                android:textColor="#AAFFFFFF"
                android:textSize="12sp" />
        
        <com.jiubang.shell.folder.smartcard.GLSmartCardButton
            android:id="@id/smartcard_mem_boost"
            android:layout_width="61dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:background="@drawable/smartcard_btn_selector"
            android:text="@string/smartcard_memclean_boost"
            android:textColor="#FFFFFFFF"
            android:textSize="13sp" />
        
    </RelativeLayout>

</com.jiubang.shell.folder.smartcard.GLMemCardView>