<?xml version="1.0" encoding="utf-8"?>
<com.jiubang.shell.folder.smartcard.GLRecommandAppView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/gl_recommand_app_imageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15.35dp"
            android:contentDescription="@string/app_name" />

        <com.jiubang.shell.common.component.ShellTextViewWrapper
            android:id="@+id/gl_recommand_app_title"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/gl_recommand_app_imageView"
            android:textColor="#ffffff"
            android:maxLines="2"
            android:textSize="16sp" />

        <com.jiubang.shell.common.component.ShellTextViewWrapper
            android:id="@+id/gl_recommand_app_summary"
            android:layout_width="196.7dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/gl_recommand_app_imageView"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:textColor="#ffffff"
            android:textSize="10.6sp" />

        <com.jiubang.shell.folder.smartcard.GLSmartCardButton
            android:id="@+id/gl_recommand_app_add_btn"
            android:layout_width="61dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15.6dp"
            android:background="@drawable/smartcard_btn_selector"
            android:gravity="center"
            android:text="@string/smartcard_recommond_app_add"
            android:textColor="#FFFFFFFF"
            android:textSize="13sp" />

        <com.jiubang.shell.folder.smartcard.GLSmartCardButton
            android:id="@+id/gl_recommand_app_next_btn"
            android:layout_width="61dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/gl_recommand_app_add_btn"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16.33dp"
            android:background="@drawable/smartcard_btn_selector"
            android:gravity="center"
            android:text="@string/smartcard_recommond_app_next"
            android:textColor="#FFFFFFFF"
            android:textSize="13sp" />
    </RelativeLayout>

</com.jiubang.shell.folder.smartcard.GLRecommandAppView>